Support build as a module